--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Гайд "ЯК ПІДКОРИТИ ДРУК З НУЛЯ"</title>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:300,400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merienda+One' rel='stylesheet' type='text/css'>
+    <link href="css/swiper.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -13,10 +14,10 @@
         <div class="menu">
             <section class="wrapper">
                 <div class="logo">
-                    IN:ZHIR
+                    <a href="#">IN:ZHIR</a>
                 </div>
                 <div class="menu-icon">
-                    <a href="#"><img alt="Instagram" src="images/instagram.svg"></a>
+                    <a href="https://www.instagram.com/in.zhir.design/" target="_blank"><img alt="Instagram" src="images/instagram.svg"></a>
                 </div>
             </section>
         </div>
@@ -159,13 +160,33 @@
         </section>
     </div>
 
+    <div class="transition" style="transform: translateY(50%);"></div>
+
+    <div class="for-who white">
+        <section class="wrapper">
+            <h2>ВІДГУКИ ПРО ГАЙД</h2>
+            
+            <div class="swiper-container">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">Дуже крутий гайд. Я точно не шкодую потрачених грошей і часу на прочитання. Бо два попередні дні були останньою краплею, коли на пошуки хоч крупинки інформації йшло в 10 раз більше часу ніж на сам дизайн макета. А у вас все коротко, ясно, молодіжно, з гумором, легко. І найголовніше - практично. Я щасливий, що натрапив на ваш тренинг, і ще сщасливіший, що отримав ідеальне рішення моєї болі. Дякую вам!</div>
+                  <div class="swiper-slide">Слава Інстаграм-рекламі, що я натрапив на цей неймовірно практичний гайд. +- 30 годин часу учпішно заощеджено. Величезне дякую рятівникам!</div>
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+        </section>
+    </div>
+
     <footer class="footer">
         <section class="wrapper">
-            <div class="logo">IN:ZHIR</div>
+            <div class="logo">
+                <a href="#">IN:ZHIR</a>
+            </div>
         </section>
     </footer>
 
+    <script src="js/swiper.min.js"></script>
     <script src="js/accordion.js"></script>
     <script src="js/timer.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
